--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,4 +6,6 @@ joblib==1.1.0
 jsonpatch==1.22
 jsonpointer==2.0
 jsonschema==3.2.0
-Python 3.9.2
+uvicorn==0.15.0
+scikit-learn==1.0.1
+scipy==1.7.3
